--- a/.graphqlconfig
+++ b/.graphqlconfig
@@ -4,7 +4,7 @@
   "extensions": {
     "endpoints": {
       "Default GraphQL Endpoint": {
-        "url": "https://body-monitor-be.herokuapp.com/v1beta1/relay",
+        "url": "https://hasura-85b2.onrender.com/v1beta1/relay",
         "headers": {
             "x-hasura-admin-secret": "KsChu1606"
         },
